replace doctrine orm by doctrine mongodb

--- a/.env.dist
+++ b/.env.dist
@@ -12,3 +12,7 @@ SYMFONY__DATABASE__USER=poc
 SYMFONY__DATABASE__PASSWORD=poc
 
 SYMFONY__JWT__SECRET__KEY=secret_key
+
+SYMFONY__MONGODB__SERVER=mongodb://localhost:27017
+SYMFONY__MONGODB__DATABASE=poc
+SYMFONY__MONGODB__DATABASE__TEST=poc_test
