--- a/composer.json
+++ b/composer.json
@@ -20,11 +20,8 @@
         "php": ">=5.5.9",
         "symfony/symfony": "3.1.*",
         "doctrine/orm": "^2.5",
-        "doctrine/doctrine-bundle": "^1.6",
         "symfony/swiftmailer-bundle": "~2.3",
         "doctrine/doctrine-cache-bundle": "^1.2",
-        "doctrine/doctrine-migrations-bundle": "~1.0",
-        "doctrine/doctrine-fixtures-bundle": "~2.2",
         "symfony/monolog-bundle": "^2.8",
         "symfony/polyfill-apcu": "^1.0",
         "sensio/distribution-bundle": "^5.0",
@@ -32,7 +29,10 @@
         "incenteev/composer-parameter-handler": "^2.0",
         "smart-core/accelerator-cache-bundle": "~1.0",
         "vlucas/phpdotenv": "~2.0",
-        "firebase/php-jwt": "~4.0"
+        "firebase/php-jwt": "~4.0",
+        "alcaeus/mongo-php-adapter": "~1.0",
+        "doctrine/mongodb-odm": "~1.0",
+        "doctrine/mongodb-odm-bundle": "~3.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
