--- a/app/config/services/controllers.yml
+++ b/app/config/services/controllers.yml
@@ -16,3 +16,4 @@ services:
             - "@security.token_storage"
             - "@security.authorization_checker"
             - "@cat.repository"
+            - "@cat.generator"
